--- a/Gan/patientList.html
+++ b/Gan/patientList.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patient List</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="../bootstrap.min.css" rel="stylesheet">
+    <link href="../bootstrap-icons.css" rel="stylesheet">
 </head>
 
 <body class="bg-light">
