--- a/Gan/doctorCard.html
+++ b/Gan/doctorCard.html
@@ -42,38 +42,8 @@
 
     <div class="container-fluid">
         <div class="row">
-            <!-- Sidebar -->
-            <div class="col-lg-3 col-md-4 col-12 p-0">
-                <div class="bg-white shadow-sm" style="height: calc(100vh - 76px); overflow-y: auto;">
-                    <div class="p-4">
-                        <ul class="list-unstyled sidebar-nav">
-                            <li class="navbar-item mb-2">
-                                <a href="dashboard.html" class="navbar-link d-flex align-items-center px-3 py-2 rounded text-decoration-none text-dark" onmouseover="this.style.backgroundColor='rgba(0,0,0,0.05)'; this.style.color='#007bff';" onmouseout="this.style.backgroundColor='transparent'; this.style.color='#212529';">
-                                    <i class="bi bi-grid-fill me-3"></i> Dashboard
-                                </a>
-                            </li>
-                            <li class="navbar-item mb-2">
-                                <a href="appointment.html" class="navbar-link d-flex align-items-center px-3 py-2 rounded text-decoration-none text-dark" onmouseover="this.style.backgroundColor='rgba(0,0,0,0.05)'; this.style.color='#007bff';" onmouseout="this.style.backgroundColor='transparent'; this.style.color='#212529';">
-                                    <i class="bi bi-calendar-check me-3"></i> Appointment
-                                </a>
-                            </li>
-                            <li class="navbar-item mb-2">
-                                <a href="#" class="navbar-link d-flex align-items-center px-3 py-2 rounded text-decoration-none text-primary" style="background-color: #e7f3ff;" onmouseover="this.style.backgroundColor='#cce7ff'; this.style.color='#0056b3';" onmouseout="this.style.backgroundColor='#e7f3ff'; this.style.color='#007bff';">
-                                    <i class="bi bi-people me-3"></i> Doctors
-                                </a>
-                            </li>
-                            <li class="navbar-item mb-2">
-                                <a href="patientList.html" class="navbar-link d-flex align-items-center px-3 py-2 rounded text-decoration-none text-dark" onmouseover="this.style.backgroundColor='rgba(0,0,0,0.05)'; this.style.color='#007bff';" onmouseout="this.style.backgroundColor='transparent'; this.style.color='#212529';">
-                                    <i class="bi bi-person-hearts me-3"></i> Patients
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Main Content Area -->
-            <div class="col-lg-9 col-md-8 col-12 p-4">
+            <!-- Main Content Area - Full Width -->
+            <div class="col-12 p-4">
                 <!-- Header with title -->
                 <div class="d-flex justify-content-between align-items-center mb-4">
                     <h3 class="m-0">Doctor List</h3>
